img fixed-bottom, hide scrollbar, no y scroll

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body,
 html {
+    height: 100%;
     overflow-y: hidden;
+    margin: 0;
+    overflow: hidden;
 }
 
 .pg1 {
